--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -20,3 +20,4 @@ jobs:
       - run: ls -la
       - run: git --version
       - run: git log
+      - run: git log -1 --pretty='format:%cd' --date=format:'%Y-%m-%d'
